fix: prevent horizontal scroll

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -726,6 +726,7 @@ code {
     margin-top: 30px;
     padding-top: 30px;
     border-top: 1px solid #cfcfcf;
+    font-size: 18px;
   }
 }
 
